fix: missing parentNode and layout issues with AEMaaCS

--- a/content/src/content/jcr_root/apps/core/email/components/commons/editor/dialog/segmenteditor/v1/segmenteditor/clientlibs/css/segmenteditor.less
+++ b/content/src/content/jcr_root/apps/core/email/components/commons/editor/dialog/segmenteditor/v1/segmenteditor/clientlibs/css/segmenteditor.less
@@ -31,6 +31,7 @@
     display: inline-block;
     box-sizing: border-box;
     width: @cmp-segmenteditor-item-icon-width;
+    min-width: @cmp-segmenteditor-item-icon-width;
     height: @cmp-segmenteditor-item-icon-height;
     margin: 0;
     padding: 0;
@@ -38,6 +39,12 @@
     line-height: @cmp-segmenteditor-item-icon-height;
     text-align: center;
     color: #707070;
+}
+
+.coral--light .cmp-segmenteditor__item-clone._coral-Button--primary._coral-Button--quiet:hover {
+    color: #2c2c2c;
+    background-color: transparent;
+    border-color: transparent;
 }
 
 .cmp-segmenteditor__item-tag {
